--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@
   
   <div class="col-12 col-sm-4">
     
-    <div class="featurette-icon"></div>
+    <div class="featurette-icon"><img src="/images/icon-pack/sklearn.svg" alt="sklearn" class="svg-icon svg-baseline"></div>
     
     <h3>scikit-learn</h3>
     <p>Advanced</p>
