--- a/publication/example/index.html
+++ b/publication/example/index.html
@@ -258,8 +258,8 @@
   
 
   <link rel="manifest" href="/index.webmanifest">
-  <link rel="icon" type="image/png" href="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_2.png">
-  <link rel="apple-touch-icon" type="image/png" href="/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_2.png">
+  <link rel="icon" type="image/png" href="/images/icon_hubf7bd072e7315948fc1cd27b754f918c_95106_32x32_fill_lanczos_center_2.PNG">
+  <link rel="apple-touch-icon" type="image/png" href="/images/icon_hubf7bd072e7315948fc1cd27b754f918c_95106_192x192_fill_lanczos_center_2.PNG">
 
   <link rel="canonical" href="https://Abhishek0697.github.io/publication/example/">
 
@@ -330,7 +330,7 @@
     "name": "Abhishek Das",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://Abhishek0697.github.io/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_2.png"
+      "url": "https://Abhishek0697.github.io/images/icon_hubf7bd072e7315948fc1cd27b754f918c_95106_192x192_fill_lanczos_center_2.PNG"
     }
   },
   "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis posuere tellus ac convallis placerat. Proin tincidunt magna sed ex sollicitudin condimentum."
@@ -1164,7 +1164,7 @@
       
     
     <li>
-      <a href="https://medium.com/@addas" target="_blank" rel="noopener">
+      <a href="https://medium.com/@addas/about" target="_blank" rel="noopener">
         <i class="fab fa-medium"></i>
       </a>
     </li>
