--- a/project/example/index.html
+++ b/project/example/index.html
@@ -1111,6 +1111,15 @@
 
   
   
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/project/detecting-hate-speech-in-multi-modal-memes/">Detecting Hate Speech in Multi-modal Memes</a></li>
+      
+    </ul>
+  </div>
+  
 
 
 
