--- a/project/detecting-hate-speech-in-multi-modal-memes/index.html
+++ b/project/detecting-hate-speech-in-multi-modal-memes/index.html
@@ -807,7 +807,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://arxiv.org/abs/2012.14891" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://arxiv.org/pdf/2012.14891.pdf" target="_blank" rel="noopener">
   PDF
 </a>
 
