--- a/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/index.html
+++ b/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/index.html
@@ -786,6 +786,41 @@
 
 
 
+<div class="btn-links mb-3">
+  
+  <a class="btn btn-outline-primary my-1" href="%22%22" target="_blank" rel="noopener">Go to Project Site</a>
+  
+  
+
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
 
 </div>
 
@@ -803,7 +838,7 @@
 
     <div class="article-style">
       <h1 id="project-poster">Project Poster</h1>
-<p><img src="https://github.com/Abhishek0697/Acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-ML/blob/master/Images/MLSP%20Project%20poster.png" alt="Alt text"></p>
+<p><img src="mlsp-project-poster.png" alt=""></p>
 
     </div>
 
