--- a/project/detecting-hate-speech-in-multi-modal-memes/index.html
+++ b/project/detecting-hate-speech-in-multi-modal-memes/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="An example of using the in-built project page.">
+  <meta name="description" content="Classify a Meme as Hateful or Benign">
 
   
   <link rel="alternate" hreflang="en-us" href="https://Abhishek0697.github.io/project/detecting-hate-speech-in-multi-modal-memes/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Abhishek Das">
   <meta property="og:url" content="https://Abhishek0697.github.io/project/detecting-hate-speech-in-multi-modal-memes/">
   <meta property="og:title" content="Detecting Hate Speech in Multi-modal Memes | Abhishek Das">
-  <meta property="og:description" content="An example of using the in-built project page."><meta property="og:image" content="https://Abhishek0697.github.io/project/detecting-hate-speech-in-multi-modal-memes/featured.png">
+  <meta property="og:description" content="Classify a Meme as Hateful or Benign"><meta property="og:image" content="https://Abhishek0697.github.io/project/detecting-hate-speech-in-multi-modal-memes/featured.png">
   <meta property="twitter:image" content="https://Abhishek0697.github.io/project/detecting-hate-speech-in-multi-modal-memes/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -331,7 +331,7 @@
       "url": "https://Abhishek0697.github.io/images/icon_huda70e1342aff628be31008af0af48ae8_56930_192x192_fill_lanczos_center_2.PNG"
     }
   },
-  "description": "An example of using the in-built project page."
+  "description": "Classify a Meme as Hateful or Benign"
 }
 </script>
 
