--- a/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/index.html
+++ b/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/index.html
@@ -60,7 +60,7 @@
   
   
   
-  <meta name="theme-color" content="#2962ff">
+  <meta name="theme-color" content="#3f51b5">
   
 
   
@@ -240,7 +240,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.min.18a81fcba9746c6a8230584f1af667d5.css">
+  <link rel="stylesheet" href="/css/wowchemy.min.b6c42e415f42ac246a43bd4bcf83734b.css">
 
   
 
@@ -802,8 +802,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <h1 id="project-poster">Project Poster</h1>
-<p><img src="mlsp-project-poster.png" alt=""></p>
+      <p><img src="mlsp-project-poster.png" alt=""></p>
 
     </div>
 
