--- a/project/detecting-hate-speech-in-multi-modal-memes/index.html
+++ b/project/detecting-hate-speech-in-multi-modal-memes/index.html
@@ -60,7 +60,7 @@
   
   
   
-  <meta name="theme-color" content="#3f51b5">
+  <meta name="theme-color" content="#4caf50">
   
 
   
@@ -240,7 +240,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.min.b6c42e415f42ac246a43bd4bcf83734b.css">
+  <link rel="stylesheet" href="/css/wowchemy.min.3086a9be692af1d148d3aee9132e2e78.css">
 
   
 
@@ -826,22 +826,6 @@
 
 
 
-  
-  
-  
-    
-  
-  
-  
-  
-  
-    
-  
-  <a class="btn btn-outline-primary my-1 mr-1" href="https://twitter.com/imad0697" target="_blank" rel="noopener">
-    <i class="fab fa-twitter mr-1"></i>
-    Follow
-  </a>
-
 
 </div>
 
@@ -852,7 +836,7 @@
 <div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 433px;">
   <div style="position: relative">
     <img src="/project/detecting-hate-speech-in-multi-modal-memes/featured_hu8f073f203a24eea0b725b56dc9ffb3dc_1201842_720x0_resize_lanczos_2.png" alt="" class="featured-image">
-    <span class="article-header-caption">Screenshot of User’s Mobile Phone</span>
+    <span class="article-header-caption">Hateful Meme(left), it&rsquo;s Benign Confounder(middle) and Object Dection Visualization(right)</span>
   </div>
 </div>
 
