--- a/project/iot_smartcar/index.html
+++ b/project/iot_smartcar/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="An example of using the in-built project page.">
+  <meta name="description" content="Crash Alert, Panic button, Drunk driver detection, Inertactive Cabin Monitoring">
 
   
   <link rel="alternate" hreflang="en-us" href="https://Abhishek0697.github.io/project/iot_smartcar/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Abhishek Das">
   <meta property="og:url" content="https://Abhishek0697.github.io/project/iot_smartcar/">
   <meta property="og:title" content="Smart Car Features using Embedded Systems and IoT | Abhishek Das">
-  <meta property="og:description" content="An example of using the in-built project page."><meta property="og:image" content="https://Abhishek0697.github.io/project/iot_smartcar/featured.png">
+  <meta property="og:description" content="Crash Alert, Panic button, Drunk driver detection, Inertactive Cabin Monitoring"><meta property="og:image" content="https://Abhishek0697.github.io/project/iot_smartcar/featured.png">
   <meta property="twitter:image" content="https://Abhishek0697.github.io/project/iot_smartcar/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -331,7 +331,7 @@
       "url": "https://Abhishek0697.github.io/images/icon_huda70e1342aff628be31008af0af48ae8_56930_192x192_fill_lanczos_center_2.PNG"
     }
   },
-  "description": "An example of using the in-built project page."
+  "description": "Crash Alert, Panic button, Drunk driver detection, Inertactive Cabin Monitoring"
 }
 </script>
 
