--- a/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/index.html
+++ b/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="Separate, Classify and Localize sounds of objects in a car’s vicinity.">
+  <meta name="description" content="Python, NumPy, scikit-learn">
 
   
   <link rel="alternate" hreflang="en-us" href="https://Abhishek0697.github.io/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Abhishek Das">
   <meta property="og:url" content="https://Abhishek0697.github.io/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/">
   <meta property="og:title" content="Acoustic classification and localisation of sound sources for autonomous vehicles | Abhishek Das">
-  <meta property="og:description" content="Separate, Classify and Localize sounds of objects in a car’s vicinity."><meta property="og:image" content="https://Abhishek0697.github.io/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/featured.png">
+  <meta property="og:description" content="Python, NumPy, scikit-learn"><meta property="og:image" content="https://Abhishek0697.github.io/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/featured.png">
   <meta property="twitter:image" content="https://Abhishek0697.github.io/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -331,7 +331,7 @@
       "url": "https://Abhishek0697.github.io/images/icon_huda70e1342aff628be31008af0af48ae8_56930_192x192_fill_lanczos_center_2.PNG"
     }
   },
-  "description": "Separate, Classify and Localize sounds of objects in a car’s vicinity."
+  "description": "Python, NumPy, scikit-learn"
 }
 </script>
 
