--- a/project/eeg-based-biometric-authentication-for-brain-computer-interfaces/index.html
+++ b/project/eeg-based-biometric-authentication-for-brain-computer-interfaces/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="Find best subset of channels using PCA">
+  <meta name="description" content="MATLAB">
 
   
   <link rel="alternate" hreflang="en-us" href="https://Abhishek0697.github.io/project/eeg-based-biometric-authentication-for-brain-computer-interfaces/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Abhishek Das">
   <meta property="og:url" content="https://Abhishek0697.github.io/project/eeg-based-biometric-authentication-for-brain-computer-interfaces/">
   <meta property="og:title" content="EEG-Based Biometric Authentication for Brain Computer Interfaces | Abhishek Das">
-  <meta property="og:description" content="Find best subset of channels using PCA"><meta property="og:image" content="https://Abhishek0697.github.io/project/eeg-based-biometric-authentication-for-brain-computer-interfaces/featured.png">
+  <meta property="og:description" content="MATLAB"><meta property="og:image" content="https://Abhishek0697.github.io/project/eeg-based-biometric-authentication-for-brain-computer-interfaces/featured.png">
   <meta property="twitter:image" content="https://Abhishek0697.github.io/project/eeg-based-biometric-authentication-for-brain-computer-interfaces/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -333,7 +333,7 @@
       "url": "https://Abhishek0697.github.io/images/icon_huda70e1342aff628be31008af0af48ae8_56930_192x192_fill_lanczos_center_2.PNG"
     }
   },
-  "description": "Find best subset of channels using PCA"
+  "description": "MATLAB"
 }
 </script>
 
