--- a/project/smart-refrigerator-using-iot-and-android/index.html
+++ b/project/smart-refrigerator-using-iot-and-android/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="Notifies and orders food items when finished, Expiry-date tracker app">
+  <meta name="description" content="Arduino, GSM SIM900A, Ultrasonic sensor, Infrared sensor">
 
   
   <link rel="alternate" hreflang="en-us" href="https://Abhishek0697.github.io/project/smart-refrigerator-using-iot-and-android/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Abhishek Das">
   <meta property="og:url" content="https://Abhishek0697.github.io/project/smart-refrigerator-using-iot-and-android/">
   <meta property="og:title" content="Smart Refrigerator using IoT and Android | Abhishek Das">
-  <meta property="og:description" content="Notifies and orders food items when finished, Expiry-date tracker app"><meta property="og:image" content="https://Abhishek0697.github.io/project/smart-refrigerator-using-iot-and-android/featured.png">
+  <meta property="og:description" content="Arduino, GSM SIM900A, Ultrasonic sensor, Infrared sensor"><meta property="og:image" content="https://Abhishek0697.github.io/project/smart-refrigerator-using-iot-and-android/featured.png">
   <meta property="twitter:image" content="https://Abhishek0697.github.io/project/smart-refrigerator-using-iot-and-android/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -331,7 +331,7 @@
       "url": "https://Abhishek0697.github.io/images/icon_huda70e1342aff628be31008af0af48ae8_56930_192x192_fill_lanczos_center_2.PNG"
     }
   },
-  "description": "Notifies and orders food items when finished, Expiry-date tracker app"
+  "description": "Arduino, GSM SIM900A, Ultrasonic sensor, Infrared sensor"
 }
 </script>
 
