--- a/project/rain-sensing-automatic-car-wiper/index.html
+++ b/project/rain-sensing-automatic-car-wiper/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="Detect rain intensity and control wiper speed">
+  <meta name="description" content="8051 Microcontroller, Raindrop sensor, Servo motor">
 
   
   <link rel="alternate" hreflang="en-us" href="https://Abhishek0697.github.io/project/rain-sensing-automatic-car-wiper/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Abhishek Das">
   <meta property="og:url" content="https://Abhishek0697.github.io/project/rain-sensing-automatic-car-wiper/">
   <meta property="og:title" content="Rain Sensing Automatic Car Wiper using AT89C51 Microcontroller | Abhishek Das">
-  <meta property="og:description" content="Detect rain intensity and control wiper speed"><meta property="og:image" content="https://Abhishek0697.github.io/project/rain-sensing-automatic-car-wiper/featured.jpg">
+  <meta property="og:description" content="8051 Microcontroller, Raindrop sensor, Servo motor"><meta property="og:image" content="https://Abhishek0697.github.io/project/rain-sensing-automatic-car-wiper/featured.jpg">
   <meta property="twitter:image" content="https://Abhishek0697.github.io/project/rain-sensing-automatic-car-wiper/featured.jpg"><meta property="og:locale" content="en-us">
   
     
@@ -331,7 +331,7 @@
       "url": "https://Abhishek0697.github.io/images/icon_huda70e1342aff628be31008af0af48ae8_56930_192x192_fill_lanczos_center_2.PNG"
     }
   },
-  "description": "Detect rain intensity and control wiper speed"
+  "description": "8051 Microcontroller, Raindrop sensor, Servo motor"
 }
 </script>
 
