--- a/publication/siamese-manhattan-lstm-implementation-for-predicting-text-similarity-and-grading-of-student-test-papers/index.html
+++ b/publication/siamese-manhattan-lstm-implementation-for-predicting-text-similarity-and-grading-of-student-test-papers/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="This paper presents a method to grade answer papers written by the students by assessing the semantic similarity between the written answers and the actual answers and grading them accordingly based on the amount of semantic similarity between the two. There is a need for automatic grading of answers for faster checking of papers and to reduce the work of the teachers, also the method of text similarity can be used in search engines to find a particular document on the Internet or by question-answer sites such as Quora to determine similar questions. We have implemented this by using Manhattan LSTM (Long short-term memory) which is a Siamese deep neural network. This method uses word embedding vectors to create embedded matrices which are fed to LSTM and similarity function to get the result of the similarity between answers and then scaled to the appropriate grade.">
+  <meta name="description" content="This paper presents a method to grade answer papers written by the students by assessing the semantic similarity between the written answers and the actual answers and grading them accordingly based on the amount of semantic similarity between the two.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://Abhishek0697.github.io/publication/siamese-manhattan-lstm-implementation-for-predicting-text-similarity-and-grading-of-student-test-papers/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Abhishek Das">
   <meta property="og:url" content="https://Abhishek0697.github.io/publication/siamese-manhattan-lstm-implementation-for-predicting-text-similarity-and-grading-of-student-test-papers/">
   <meta property="og:title" content="Siamese Manhattan LSTM Implementation for Predicting Text Similarity and Grading of Student Test Papers | Abhishek Das">
-  <meta property="og:description" content="This paper presents a method to grade answer papers written by the students by assessing the semantic similarity between the written answers and the actual answers and grading them accordingly based on the amount of semantic similarity between the two. There is a need for automatic grading of answers for faster checking of papers and to reduce the work of the teachers, also the method of text similarity can be used in search engines to find a particular document on the Internet or by question-answer sites such as Quora to determine similar questions. We have implemented this by using Manhattan LSTM (Long short-term memory) which is a Siamese deep neural network. This method uses word embedding vectors to create embedded matrices which are fed to LSTM and similarity function to get the result of the similarity between answers and then scaled to the appropriate grade."><meta property="og:image" content="https://Abhishek0697.github.io/publication/siamese-manhattan-lstm-implementation-for-predicting-text-similarity-and-grading-of-student-test-papers/featured.png">
+  <meta property="og:description" content="This paper presents a method to grade answer papers written by the students by assessing the semantic similarity between the written answers and the actual answers and grading them accordingly based on the amount of semantic similarity between the two."><meta property="og:image" content="https://Abhishek0697.github.io/publication/siamese-manhattan-lstm-implementation-for-predicting-text-similarity-and-grading-of-student-test-papers/featured.png">
   <meta property="twitter:image" content="https://Abhishek0697.github.io/publication/siamese-manhattan-lstm-implementation-for-predicting-text-similarity-and-grading-of-student-test-papers/featured.png"><meta property="og:locale" content="en-us">
   
     
@@ -333,7 +333,7 @@
       "url": "https://Abhishek0697.github.io/images/icon_huda70e1342aff628be31008af0af48ae8_56930_192x192_fill_lanczos_center_2.PNG"
     }
   },
-  "description": "This paper presents a method to grade answer papers written by the students by assessing the semantic similarity between the written answers and the actual answers and grading them accordingly based on the amount of semantic similarity between the two. There is a need for automatic grading of answers for faster checking of papers and to reduce the work of the teachers, also the method of text similarity can be used in search engines to find a particular document on the Internet or by question-answer sites such as Quora to determine similar questions. We have implemented this by using Manhattan LSTM (Long short-term memory) which is a Siamese deep neural network. This method uses word embedding vectors to create embedded matrices which are fed to LSTM and similarity function to get the result of the similarity between answers and then scaled to the appropriate grade."
+  "description": "This paper presents a method to grade answer papers written by the students by assessing the semantic similarity between the written answers and the actual answers and grading them accordingly based on the amount of semantic similarity between the two."
 }
 </script>
 
@@ -847,7 +847,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/http://doi-org-443.webvpn.fjmu.edu.cn/10.1007/978-981-15-1002-1_60" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1" href="https://doi.org/https://doi.org/10.1007/978-981-15-1002-1_60" target="_blank" rel="noopener">
   DOI
 </a>
 
@@ -916,7 +916,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9">In Proceedings of International Conference on Wireless Communication</div>
+          <div class="col-12 col-md-9">In <em>Proceedings of International Conference on Wireless Communication, (ICWiCOM 2019)</em></div>
         </div>
       </div>
       <div class="col-md-1"></div>
