--- a/publication/index.html
+++ b/publication/index.html
@@ -802,7 +802,7 @@
 
 
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/http://doi-org-443.webvpn.fjmu.edu.cn/10.1007/978-981-15-1002-1_60" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://doi.org/https://doi.org/10.1007/978-981-15-1002-1_60" target="_blank" rel="noopener">
   DOI
 </a>
 
