--- a/project/detecting-hate-speech-in-multi-modal-memes/index.html
+++ b/project/detecting-hate-speech-in-multi-modal-memes/index.html
@@ -823,6 +823,14 @@
   
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://www.youtube.com/watch?v=MpIFq9qXhc4" target="_blank" rel="noopener">
+  Video
+</a>
+
 
 
 
