--- a/project/detecting-hate-speech-in-multi-modal-memes/index.html
+++ b/project/detecting-hate-speech-in-multi-modal-memes/index.html
@@ -1182,7 +1182,7 @@
     
     <a href="/talk/facebook-hateful-memes-challenge/"  class="summary-link">
       <div class="article-style">
-        We present Object Detection based Image Captioning and Sentiment Analysis as our two Research ideas to enhance performance against the adversarial examples in the challenge dataset.
+        We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced the challenge dataset.
       </div>
     </a>
     
