--- a/talk/facebook-hateful-memes-challenge/index.html
+++ b/talk/facebook-hateful-memes-challenge/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="We present Object Detection based Image Captioning and Sentiment Analysis as our two Research ideas to enhance performance against the adversarial examples in the challenge dataset.">
+  <meta name="description" content="We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced the challenge dataset.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://Abhishek0697.github.io/talk/facebook-hateful-memes-challenge/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Abhishek Das">
   <meta property="og:url" content="https://Abhishek0697.github.io/talk/facebook-hateful-memes-challenge/">
   <meta property="og:title" content="Research Ideas for the Hateful Memes Challenge | Abhishek Das">
-  <meta property="og:description" content="We present Object Detection based Image Captioning and Sentiment Analysis as our two Research ideas to enhance performance against the adversarial examples in the challenge dataset."><meta property="og:image" content="https://Abhishek0697.github.io/talk/facebook-hateful-memes-challenge/featured.PNG">
+  <meta property="og:description" content="We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced the challenge dataset."><meta property="og:image" content="https://Abhishek0697.github.io/talk/facebook-hateful-memes-challenge/featured.PNG">
   <meta property="twitter:image" content="https://Abhishek0697.github.io/talk/facebook-hateful-memes-challenge/featured.PNG"><meta property="og:locale" content="en-us">
   
     
@@ -328,7 +328,7 @@
     "name": "Abhishek Das"
   },
   
-  "description": "We present Object Detection based Image Captioning and Sentiment Analysis as our two Research ideas to enhance performance against the adversarial examples in the challenge dataset."
+  "description": "We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced the challenge dataset."
 }
 </script>
 
@@ -867,7 +867,7 @@
           <div class="col-12 col-md-3 pub-row-heading">Event</div>
           <div class="col-12 col-md-9">
             <a href="https://ai.facebook.com/blog/hateful-memes-challenge-and-data-set/" target="_blank" rel="noopener">
-            Hateful Memes Challenge session, NeurIPS - Contributed Talks
+            Hateful Memes Challenge session @ NeurIPS - Contributed Talks
             </a>
           </div>
         </div>
@@ -895,7 +895,7 @@
     <div class="space-below"></div>
 
     <div class="article-style">
-      <p><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSmbP3wfqOAAUOv5o5pFGcoFgmy_LlJZwxM_B8v_fAY91i1_DvEY_BaRZ8hqk8qgez8Iq_lyEJEdESH/embed?start=false&loop=false&delayms=3000" frameborder="0" width="720" height="1280" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
+      <p><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQPj6tRkmuUFDkVpe62UL1TPf9belHfbZwkItkbiOsKcX3YqOCnnvnvUryPjwbksbqvdfd8088YyZS9/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></p>
 
     </div>
 
