--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
 
     <div class="article-style">
       <p>I am passionate about designing projects that could effectively solve global real-time issues and disruptively innovate the industry by applying Computer Vision, Natural Language Processing, Deep Learning, and the Internet of Things.</p>
-<p>My Research interest lies in the Multimodal aspect of Machine Learning, where we integrate knowlegde from Vision, Language and Speech modalities.</p>
+<p>My Research interest lies in the Multimodal aspect of Machine Learning, where we integrate knowledge from Vision, Language and Speech modalities.</p>
 <p>In my leisure time, I enjoy playing cricket</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/media/resume.pdf" target="_blank">resumé</a>.</p>
