--- a/project/user-de-identification-over-speech-and-dialogue-exchange/index.html
+++ b/project/user-de-identification-over-speech-and-dialogue-exchange/index.html
@@ -60,7 +60,7 @@
   
   
   
-  <meta name="theme-color" content="#4caf50">
+  <meta name="theme-color" content="#FFB600">
   
 
   
@@ -240,7 +240,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/wowchemy.min.3086a9be692af1d148d3aee9132e2e78.css">
+  <link rel="stylesheet" href="/css/wowchemy.min.2400d7550536039f320c326c62948c16.css">
 
   
 
@@ -787,6 +787,45 @@
 
 
 
+
+<div class="btn-links mb-3">
+  
+  
+
+
+
+
+
+
+
+
+  
+    
+  
+
+
+
+<a class="btn btn-outline-primary my-1 mr-1" href="https://github.com/Abhishek0697/User-De-Identification-over-Speech-Dialogue-exchange/blob/main/Report.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
 
 
 </div>
