--- a/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/index.html
+++ b/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/index.html
@@ -1079,7 +1079,7 @@
       
     
     <li>
-      <a href="https://medium.com/@addas/about" target="_blank" rel="noopener">
+      <a href="https://medium.com/@iamabhishekdas" target="_blank" rel="noopener">
         <i class="fab fa-medium"></i>
       </a>
     </li>
