--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
           
         
         <li>
-          <a href="https://medium.com/@addas/about" target="_blank" rel="noopener" aria-label="medium">
+          <a href="https://medium.com/@iamabhishekdas" target="_blank" rel="noopener" aria-label="medium">
             <i class="fab fa-medium big-icon"></i>
           </a>
         </li>
