--- a/project/user-de-identification-over-speech-and-dialogue-exchange/index.html
+++ b/project/user-de-identification-over-speech-and-dialogue-exchange/index.html
@@ -1079,7 +1079,7 @@
       
     
     <li>
-      <a href="https://medium.com/@addas/about" target="_blank" rel="noopener">
+      <a href="https://medium.com/@iamabhishekdas" target="_blank" rel="noopener">
         <i class="fab fa-medium"></i>
       </a>
     </li>
