--- a/publication/siamese-manhattan-lstm-implementation-for-predicting-text-similarity-and-grading-of-student-test-papers/index.html
+++ b/publication/siamese-manhattan-lstm-implementation-for-predicting-text-similarity-and-grading-of-student-test-papers/index.html
@@ -1157,7 +1157,7 @@
       
     
     <li>
-      <a href="https://medium.com/@addas/about" target="_blank" rel="noopener">
+      <a href="https://medium.com/@iamabhishekdas" target="_blank" rel="noopener">
         <i class="fab fa-medium"></i>
       </a>
     </li>
