--- a/publication/study-of-performance-of-an-ofdm-transceiver-using-sdr-platform/index.html
+++ b/publication/study-of-performance-of-an-ofdm-transceiver-using-sdr-platform/index.html
@@ -1137,7 +1137,7 @@
       
     
     <li>
-      <a href="https://medium.com/@addas/about" target="_blank" rel="noopener">
+      <a href="https://medium.com/@iamabhishekdas" target="_blank" rel="noopener">
         <i class="fab fa-medium"></i>
       </a>
     </li>
