--- a/index.html
+++ b/index.html
@@ -3830,7 +3830,7 @@
 
         
         <p class="hero-lead" style="margin: 0 auto 0 auto;">
-          I am center aligned 😄
+          feature: - icon: pytorch icon_pack: &ldquo;custom&rdquo; name: PyTorch description: Advanced
         </p>
         
 
