--- a/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/index.html
+++ b/project/acoustic-classification-and-localisation-of-sound-sources-for-autonomous-vehicles-using-machine-learning/index.html
@@ -856,7 +856,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tag/ml/">ML</a>
+  <a class="badge badge-light" href="/tag/machine-learning/">Machine Learning</a>
   
 </div>
 
