--- a/project/eeg-based-biometric-authentication-for-brain-computer-interfaces/index.html
+++ b/project/eeg-based-biometric-authentication-for-brain-computer-interfaces/index.html
@@ -856,7 +856,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tag/ml/">ML</a>
+  <a class="badge badge-light" href="/tag/machine-learning/">Machine Learning</a>
   
 </div>
 
