--- a/project/smart-refrigerator-using-iot-and-android/index.html
+++ b/project/smart-refrigerator-using-iot-and-android/index.html
@@ -788,8 +788,6 @@
 
 <div class="btn-links mb-3">
   
-  <a class="btn btn-outline-primary my-1" href="https://github.com/Abhishek0697/IoT_Refrigerator" target="_blank" rel="noopener">Go to Project Site</a>
-  
   
 
 
@@ -843,7 +841,14 @@
   <div class="article-container">
 
     <div class="article-style">
-      
+      <h3 id="view-on-githubhttpsgithubcomabhishek0697iot_refrigerator">View on <a href="https://github.com/Abhishek0697/IoT_Refrigerator" target="_blank" rel="noopener">GitHub</a></h3>
+<h3 id="in-the-news">In the News</h3>
+<ul>
+<li>This project was featured in the <a href="https://maharashtratimes.com" target="_blank" rel="noopener">Maharashtra Times</a>, a Marathi newspaper based in Mumbai, India on 21st April 2018.</li>
+<li>It was also selected for display at <a href="https://tedxgateway.com/" target="_blank" rel="noopener">TEDx Gateway</a> Conference in Mumbai, November 2018.</li>
+</ul>
+<img src="toi.jpeg" alt="drawing" width="500"/>
+
     </div>
 
     
@@ -855,7 +860,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tag/iot/">IoT</a>
+  <a class="badge badge-light" href="/tag/internet-of-things/">Internet of Things</a>
   
 </div>
 
