--- a/project/rain-sensing-automatic-car-wiper/index.html
+++ b/project/rain-sensing-automatic-car-wiper/index.html
@@ -857,7 +857,7 @@
 
 <div class="article-tags">
   
-  <a class="badge badge-light" href="/tag/iot/">IoT</a>
+  <a class="badge badge-light" href="/tag/internet-of-things/">Internet of Things</a>
   
 </div>
 
