--- a/project/augmented-reality-with-planar-homographies/index.html
+++ b/project/augmented-reality-with-planar-homographies/index.html
@@ -802,7 +802,52 @@
 
 
 <video controls >
+  <source src="ar.avi" type="video/avi">
+</video>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
+<video controls >
   <source src="ar_source.mov" type="video/mov">
+</video>
+
+
+
+
+
+
+  
+  
+
+
+
+
+
+  
+
+
+
+
+
+  
+
+
+<video controls >
+  <source src="/media/ar.avi" type="video/avi">
 </video>
 
     </div>
