--- a/project/augmented-reality-with-planar-homographies/index.html
+++ b/project/augmented-reality-with-planar-homographies/index.html
@@ -783,7 +783,9 @@
   <div class="article-container">
 
     <div class="article-style">
-      <h3 id="view-on-githubhttpsgithubcomabhishek0697computer-visiontreemainaugmented20reality20with20planar20homographies">View on <a href="https://github.com/Abhishek0697/Computer-Vision/tree/main/Augmented%20Reality%20with%20Planar%20Homographies" target="_blank" rel="noopener">GitHub</a></h3>
+      <h2 id="creating-a-real-time-augmented-reality-application">Creating a real-time Augmented Reality Application</h2>
+<blockquote>
+<p>Rendering video on a moving target
 
 
 
@@ -803,7 +805,11 @@
 
 <video controls >
   <source src="ar_c.mp4" type="video/mp4">
-</video>
+</video></p>
+</blockquote>
+<p>I have tracked the book in each frame in the target video and overlayed each frame of the source video onto the book in the target video.</p>
+<blockquote>
+<p>Source video
 
 
 
@@ -822,22 +828,20 @@
 
 
 <video controls >
-  <source src="ar_source.mov" type="video/mov">
-</video>
+  <source src="ar_source_c.mp4" type="video/mp4">
+</video></p>
+</blockquote>
+<blockquote>
+<p>Target video
 
 
 
 
 
 
-  
-  
 
 
 
-
-
-  
 
 
 
@@ -847,8 +851,11 @@
 
 
 <video controls >
-  <source src="/media/ar.avi" type="video/avi">
-</video>
+  <source src="book_c.mp4" type="video/mp4">
+</video></p>
+</blockquote>
+<h3 id="view-on-githubhttpsgithubcomabhishek0697computer-visiontreemainaugmented20reality20with20planar20homographies">View on <a href="https://github.com/Abhishek0697/Computer-Vision/tree/main/Augmented%20Reality%20with%20Planar%20Homographies" target="_blank" rel="noopener">GitHub</a></h3>
+<p>Acknowledgements - This project is done as a part of the course curriculum in 16-720:Computer Vision @ Carnegie Mellon University</p>
 
     </div>
 
