--- a/project/augmented-reality-with-planar-homographies/index.html
+++ b/project/augmented-reality-with-planar-homographies/index.html
@@ -1158,6 +1158,15 @@
 
   
   
+  <div class="article-widget content-widget-hr">
+    <h3>Related</h3>
+    <ul>
+      
+      <li><a href="/project/photometric-stereo/">Photometric Stereo</a></li>
+      
+    </ul>
+  </div>
+  
 
 
 
