--- a/project/photometric-stereo/index.html
+++ b/project/photometric-stereo/index.html
@@ -783,7 +783,7 @@
   <div class="article-container">
 
     <div class="article-style">
-      <h4 id="rendering-n-dot-l-lighting-a-uniform-fully-reflective-lambertian-sphere">Rendering n-dot-l lighting a uniform fully reflective Lambertian sphere</h4>
+      <h4 id="rendering-n-dot-l-lighting-for-a-uniform-fully-reflective-lambertian-sphere">Rendering n-dot-l lighting for a uniform fully reflective Lambertian sphere</h4>
 
 
 
@@ -807,20 +807,20 @@
 
 
 
-<figure id="figure-a-caption">
+<figure id="figure-rendered-images-for-3-different-light-sources">
 
 
-  <a data-fancybox="" href="/project/photometric-stereo/ndotl_hu1021c8e86a002a3602af03760fb046ff_196751_2000x2000_fit_lanczos_2.png" data-caption="A caption">
+  <a data-fancybox="" href="/project/photometric-stereo/ndotl_hu3b7ac7be2fa7758741ea257944837d2a_179265_2000x2000_fit_lanczos_2.png" data-caption="Rendered images for 3 different light sources">
 
 
-  <img data-src="/project/photometric-stereo/ndotl_hu1021c8e86a002a3602af03760fb046ff_196751_2000x2000_fit_lanczos_2.png" class="lazyload" alt="" width="3209" height="712">
+  <img data-src="/project/photometric-stereo/ndotl_hu3b7ac7be2fa7758741ea257944837d2a_179265_2000x2000_fit_lanczos_2.png" class="lazyload" alt="" width="3209" height="612">
 </a>
 
 
   
   
   <figcaption>
-    A caption
+    Rendered images for 3 different light sources
   </figcaption>
 
 
