--- a/project/multi-image-steganography-using-deep-neural-networks/index.html
+++ b/project/multi-image-steganography-using-deep-neural-networks/index.html
@@ -832,7 +832,7 @@
     <div class="article-style">
       
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube.com/embed/Sb-Df9QW0sM&amp;t=5s" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+  <iframe src="https://www.youtube.com/embed/Sb-Df9QW0sM" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
 
