--- a/index.html
+++ b/index.html
@@ -1783,7 +1783,7 @@
   
   <a href="/talk/facebook-hateful-memes-challenge/" class="summary-link">
     <div class="article-style">
-      <p>We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced the challenge dataset.</p>
+      <p>We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced in the challenge dataset.</p>
     </div>
   </a>
   
