--- a/talk/facebook-hateful-memes-challenge/index.html
+++ b/talk/facebook-hateful-memes-challenge/index.html
@@ -34,7 +34,7 @@
   
     
   
-  <meta name="description" content="We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced the challenge dataset.">
+  <meta name="description" content="We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced in the challenge dataset.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://Abhishek0697.github.io/talk/facebook-hateful-memes-challenge/">
@@ -281,7 +281,7 @@
   <meta property="og:site_name" content="Abhishek Das">
   <meta property="og:url" content="https://Abhishek0697.github.io/talk/facebook-hateful-memes-challenge/">
   <meta property="og:title" content="Research Ideas for the Hateful Memes Challenge | Abhishek Das">
-  <meta property="og:description" content="We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced the challenge dataset."><meta property="og:image" content="https://Abhishek0697.github.io/talk/facebook-hateful-memes-challenge/featured.PNG">
+  <meta property="og:description" content="We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced in the challenge dataset."><meta property="og:image" content="https://Abhishek0697.github.io/talk/facebook-hateful-memes-challenge/featured.PNG">
   <meta property="twitter:image" content="https://Abhishek0697.github.io/talk/facebook-hateful-memes-challenge/featured.PNG"><meta property="og:locale" content="en-us">
   
     
@@ -328,7 +328,7 @@
     "name": "Abhishek Das"
   },
   
-  "description": "We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced the challenge dataset."
+  "description": "We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced in the challenge dataset."
 }
 </script>
 
