--- a/talk/index.html
+++ b/talk/index.html
@@ -727,7 +727,7 @@
     
     <a href="/talk/facebook-hateful-memes-challenge/"  class="summary-link">
       <div class="article-style">
-        We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced in the challenge dataset.
+        We present Object Detection based Image Captioning, and Sentiment Analysis as our two research ideas to enhance performance against the adversarial examples introduced in the Hateful Meme challenge dataset.
       </div>
     </a>
     
