--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@
           </div>
           <div class="card-text"><p>Responsibilities include:</p>
 <ul>
-<li>Developing Neural Networks for Fine-Grain Retail Product Image Classification</li>
+<li>Designing Neural Networks for Fine-Grain Retail Product Image Classification</li>
 <li>Read and Implement latest research techniques in the field to optimize the model performance</li>
 </ul>
 </div>
@@ -1154,7 +1154,7 @@
           <div class="card-text"><p>Responsibilities include:</p>
 <ul>
 <li>Developing a pipeline for Plugs detection for Inventory management in Retail Stores</li>
-<li>Dataset Analysis and Cleaning</li>
+<li>Work with Long Tail distributions; Dataset Analysis and Cleaning</li>
 </ul>
 </div>
         </div>
@@ -1810,12 +1810,12 @@
   
   
   <a href="/talk/facebook-hateful-memes-challenge/">
-    <div class="img-hover-zoom"><img src="/talk/facebook-hateful-memes-challenge/featured_hueaddba49084308a9203d92f581fff297_733799_4933b09acb496be26992084abde8fded.PNG" data-src="/talk/facebook-hateful-memes-challenge/featured_hueaddba49084308a9203d92f581fff297_733799_808x455_fill_lanczos_smart1_2.PNG" class="article-banner lazyload" alt="Research Ideas for the Hateful Memes Challenge"></div>
+    <div class="img-hover-zoom"><img src="/talk/facebook-hateful-memes-challenge/featured_hueaddba49084308a9203d92f581fff297_733799_4933b09acb496be26992084abde8fded.PNG" data-src="/talk/facebook-hateful-memes-challenge/featured_hueaddba49084308a9203d92f581fff297_733799_808x455_fill_lanczos_smart1_2.PNG" class="article-banner lazyload" alt="Research Ideas for the Facebook Hateful Memes Challenge"></div>
   </a>
   
 
   <h3 class="article-title mb-1 mt-3">
-    <a href="/talk/facebook-hateful-memes-challenge/">Research Ideas for the Hateful Memes Challenge</a>
+    <a href="/talk/facebook-hateful-memes-challenge/">Research Ideas for the Facebook Hateful Memes Challenge</a>
   </h3>
 
   
