--- a/project/photometric-stereo/index.html
+++ b/project/photometric-stereo/index.html
@@ -827,8 +827,7 @@
 <li>Understanding and Rendering of n-dot-l Lighting</li>
 </ul>
 <br>
-<blockquote>
-<p>Image gallery
+<h3 id="image-gallery">Image gallery</h3>
 
 
 
@@ -930,8 +929,7 @@
   
   
   
-</div></p>
-</blockquote>
+</div>
 <br>
 <br>
 <h4 id="rendering-n-dot-l-lighting-for-a-uniform-fully-reflective-lambertian-sphere">Rendering n-dot-l lighting for a uniform fully reflective Lambertian sphere</h4>
