--- a/index.html
+++ b/index.html
@@ -989,6 +989,14 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
+              <p class="course"></p>
+              <p class="institution"></p>
+            </div>
+          </li>
+          
+          <li>
+            <i class="fa-li fas fa-graduation-cap"></i>
+            <div class="description">
               <p class="course">B.Eng. in Electronics and Telecommunication Engineering, 2019</p>
               <p class="institution">University of Mumbai</p>
             </div>
