--- a/index.html
+++ b/index.html
@@ -981,6 +981,14 @@
           <li>
             <i class="fa-li fas fa-graduation-cap"></i>
             <div class="description">
+              <p class="course"></p>
+              <p class="institution"></p>
+            </div>
+          </li>
+          
+          <li>
+            <i class="fa-li fas fa-graduation-cap"></i>
+            <div class="description">
               <p class="course">M.S. in Electrical and Computer Engineering, 2020</p>
               <p class="institution">Carnegie Mellon University</p>
             </div>
