--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,8 @@
           <div class="card-text"><p>Responsibilities include:</p>
 <ul>
 <li>Developing a pipeline for Plugs detection for Inventory management in Retail Stores</li>
-<li>Work with Long Tail distributions; Dataset Analysis and Cleaning</li>
+<li>Work with Long Tail distributions</li>
+<li>Analysis and cleaning of large noisy image datasets</li>
 </ul>
 </div>
         </div>
