--- a/myprojects/index.html
+++ b/myprojects/index.html
@@ -604,7 +604,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/myacc/#accomplishments"><span>Accomplishments</span></a>
+          <a class="nav-link " href="/myacc/#patents"><span>Accomplishments</span></a>
         </li>
 
         
