--- a/myacc/index.html
+++ b/myacc/index.html
@@ -779,7 +779,7 @@
   
   
     <div class="card experience course">
-      <div class="card-body"><h4 class="card-title exp-title text-muted my-0">The method and system of using RetailNet for inventory management</h4><div class="card-subtitle my-0 article-metadata"><a href="https://www.cylab.cmu.edu/" target="_blank" rel="noopener">CyLab Security and Privacy Institute - Biometrics Center, Carnegie Mellon University, Patent Pending</a><span class="middot-divider"></span>
+      <div class="card-body"><h4 class="card-title exp-title text-muted my-0">The method and system of using RetailNet for inventory management</h4><div class="card-subtitle my-0 article-metadata"><a href="https://www.cylab.cmu.edu/" target="_blank" rel="noopener">CyLab Security and Privacy Institute, Carnegie Mellon University, Patent Pending</a><span class="middot-divider"></span>
 
           Oct 2020
           
