--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
   
 
   
-  <section id="topimage" class="home-section wg-blank  " style="padding: 200px 100px 200px 100px;" >
+  <section id="topimage" class="home-section wg-blank  " style="padding: 100px 0 100px 0;" >
    <div class="home-section-bg  bg-image parallax" style="background-image:  url(&#39;https://Abhishek0697.github.io/media/cut.jpg&#39;);"></div>
     <div class="container">
 
