--- a/index.html
+++ b/index.html
@@ -788,7 +788,7 @@
 
   
   <section id="topimage" class="home-section wg-blank dark "  >
-   <div class="home-section-bg  bg-image" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(&#39;https://Abhishek0697.github.io/media/thecut.jpg&#39;);background-size: cover;background-position: center;"></div>
+   <div class="home-section-bg  bg-image" style="background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(&#39;https://Abhishek0697.github.io/media/thecut.jpg&#39;);background-size: contain;background-position: center;"></div>
     <div class="container">
 
     
