--- a/index.html
+++ b/index.html
@@ -1036,8 +1036,7 @@
     <h1>Hey, I am Abhishek!</h1>
 
     <div class="article-style">
-      <p>I am passionate about designing projects that could effectively solve global real-time issues, and create amazing innovations that could serve mankind to make its life easier and more fulfilling by applying techniques in Computer Vision, Natural Language Processing, Deep Learning and the Internet of Things.</p>
-<p>My Research interest lies in the Multimodal aspect of Machine Learning, where we integrate knowledge from Vision, Language and Speech modalities.</p>
+      <p>I am passionate about designing projects that could effectively solve global real-time issues, and create amazing innovations that could serve mankind to make its life easier and more fulfilling by applying techniques in Computer Vision, Natural Language Processing, Deep Learning and the Internet of Things. My Research interest lies in the Multimodal aspect of Machine Learning, where we integrate knowledge from Vision, Language and Speech modalities.</p>
 <p>In my leisure time, I enjoy playing cricket and cooking.</p>
 <p>
   <i class="fas fa-download  pr-1 fa-fw"></i> Download my <a href="/media/resume.pdf" target="_blank">resumé</a>.</p>
