--- a/about/index.html
+++ b/about/index.html
@@ -462,7 +462,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/about/#experience" data-target="#experience"><span>About Me</span></a>
+          <a class="nav-link " href="/about/#about" data-target="#about"><span>About Me</span></a>
         </li>
 
         
