--- a/talk/facebook-hateful-memes-challenge/index.html
+++ b/talk/facebook-hateful-memes-challenge/index.html
@@ -500,7 +500,7 @@
         
 
         <li class="nav-item">
-          <a class="nav-link " href="/about/#experience"><span>About Me</span></a>
+          <a class="nav-link " href="/about/#about"><span>About Me</span></a>
         </li>
 
         
