--- a/about/index.html
+++ b/about/index.html
@@ -663,23 +663,8 @@
   
 
   
-
-  
-  
-
-  
-
-  
-  
-
-  
-  
-  
-
-  
-  
-  
-  
+    
+    
   
 
   
@@ -692,9 +677,27 @@
 
   
   
+  
 
   
-  <section id="topimage" class="home-section wg-blank dark "  >
+  
+  
+  
+  
+
+  
+  
+
+  
+
+  
+  
+
+  
+  
+
+  
+  <section id="topimage" class="home-section wg-blank dark " style="padding: 100px 0 300px 0;" >
    <div class="home-section-bg  bg-image" style="background-image:  url(&#39;https://Abhishek0697.github.io/media/thecut.jpg&#39;);background-size: cover;background-position: center;"></div>
     <div class="container">
 
