--- a/about/index.html
+++ b/about/index.html
@@ -1152,23 +1152,8 @@
   
 
   
-
-  
-  
-
-  
-
-  
-  
-
-  
-  
-  
-
-  
-  
-  
-  
+    
+    
   
 
   
@@ -1181,9 +1166,27 @@
 
   
   
+  
 
   
-  <section id="lessserious" class="home-section wg-blank  "  >
+  
+  
+  
+  
+
+  
+  
+
+  
+
+  
+  
+
+  
+  
+
+  
+  <section id="lessserious" class="home-section wg-blank  " style="padding: 20px 0 20px 0;" >
    <div class="home-section-bg " ></div>
     <div class="container">
 
@@ -1198,19 +1201,22 @@
 
   <div class="col-12">
     <h1 id="less-serious-life">Less Serious Life</h1>
-<h3 id="some-fun-facts-about-me">Some fun-facts about me:</h3>
+<blockquote>
+<p>Some fun-facts about me</p>
+</blockquote>
 <p>🏠 I come from the city of Mumbai in India</p>
-<p>🔤 Languages I know - Bengali, English, Hindi, and Marathi</p>
-<p>🏆 I love playing cricket and have won numerous cometitions, where I have been awarded as the best-player</p>
+<p>🆎 Languages I know: Bengali, English, Hindi, and Marathi</p>
+<p>🏆 I love playing cricket and have won numerous cometitions, where I have been awarded as the best-player!</p>
+<p>🏃 I like working out in the gym!</p>
 <p>🍴 I like to watch cooking videos and try making the dishes!</p>
-<p>🏃 I like working out in the gym</p>
-<p>📺 The TV series I am a huge fan of and the favourite characters are-</p>
+<p>☕ I am a excessive coffee drinker!</p>
+<p>😋 My cheat meal would be Butter Chicken, Garlic Naan and a Sizzling Brownie!</p>
+<p>📺 The TV series I am a huge fan of and the favourite characters are:</p>
 <ul>
-<li>Friends (Joey, Chandler)</li>
-<li>Game of Thrones (Arya Stark)</li>
-<li>The Office (Michael Scott)</li>
+<li>Friends: Joey, Chandler</li>
+<li>Game of Thrones: Arya Stark</li>
+<li>The Office: Michael Scott</li>
 </ul>
-<p>😋 My cheat meal would be Butter Chicken, Garlic Naan and a Sizzling Brownie</p>
 
   </div>
 
