--- a/about/index.html
+++ b/about/index.html
@@ -1209,7 +1209,7 @@
 <p>🏆 I love playing cricket and have won numerous cometitions, where I have been awarded as the best-player!</p>
 <p>🏃 I like working out in the gym!</p>
 <p>🍴 I like to watch cooking videos and try making the dishes!</p>
-<p>☕ I am a excessive coffee drinker!</p>
+<p>☕ I am an excessive coffee drinker and a morning person!</p>
 <p>😋 My cheat meal would be Butter Chicken, Garlic Naan and a Sizzling Brownie!</p>
 <p>📺 The TV series I am a huge fan of and the favourite characters are:</p>
 <ul>
