Add redirect to new site abhishekdas-dev.github.io

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html><html lang="en-us" >
 
 <head>
+  <!-- Redirect to new site -->
+  <meta http-equiv="refresh" content="0; url=https://abhishekdas-dev.github.io/">
+  <link rel="canonical" href="https://abhishekdas-dev.github.io/">
+  <script>window.location.replace("https://abhishekdas-dev.github.io/");</script>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
